@@ -15,6 +15,7 @@ import static org.mockito.Mockito.*;
 import java.io.IOException;
 
 import javax.servlet.FilterChain;
+import javax.servlet.FilterConfig;
 import javax.servlet.ServletContext;
 import javax.servlet.ServletException;
 import javax.servlet.http.HttpServletRequest;
@@ -36,6 +37,7 @@ public class ControllerFilterTest {
 	private HttpServletRequest request;
 	private HttpServletResponse response;
 	private ServletContext servletContext;
+	private FilterConfig filterConfig;
 	private FilterChain filterChain;
 	
 	@Before
@@ -43,9 +45,10 @@ public class ControllerFilterTest {
 		filter = new ControllerFilter();
 		
 		servletContext = mock(ServletContext.class);
+		filterConfig = mock(FilterConfig.class);
 
 		WeberknechtConf conf = readConfig("test-data/weberknecht-controller-test.xml");
-		filter.init(servletContext, conf, null);
+		filter.init(servletContext, conf, null, filterConfig);
 
 		request = mock(HttpServletRequest.class);
 		when(request.getServletPath()).thenReturn("");
