@@ -48,6 +48,7 @@ public class Controller extends HttpServlet {
 	public void init() throws ServletException {
 		try {
 			core = new ControllerCore(getServletContext());
+			core.setServletConfig(getServletConfig());
 		}
 		catch (Exception e) {
 			log.error("init() - Exception: "+e.getMessage(), e);
@@ -57,6 +58,7 @@ public class Controller extends HttpServlet {
 
 	protected void init(ServletContext servletContext, WeberknechtConf conf, DbConnectionProvider dbConnectionProvider) throws ClassNotFoundException {
 		core = new ControllerCore(servletContext, conf, dbConnectionProvider);
+		core.setServletConfig(getServletConfig());
 	}
 
 	@Override
