@@ -17,6 +17,8 @@ import java.util.Map.Entry;
 import java.util.Vector;
 
 import javax.naming.NamingException;
+import javax.servlet.FilterConfig;
+import javax.servlet.ServletConfig;
 import javax.servlet.ServletContext;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
@@ -32,6 +34,7 @@ import de.highbyte_le.weberknecht.db.DBConnectionException;
 import de.highbyte_le.weberknecht.db.DbConnectionHolder;
 import de.highbyte_le.weberknecht.db.DbConnectionProvider;
 import de.highbyte_le.weberknecht.db.DefaultWebDbConnectionProvider2;
+import de.highbyte_le.weberknecht.request.Configurable;
 import de.highbyte_le.weberknecht.request.DatabaseCapable;
 import de.highbyte_le.weberknecht.request.ModelHelper;
 import de.highbyte_le.weberknecht.request.actions.ActionNotFoundException;
@@ -67,7 +70,11 @@ public class ControllerCore {
 	
 	private WeberknechtConf conf;
 	
-	private ServletContext servletContext; //TODO check, if servlet context can be shared across requests
+	private ServletContext servletContext;
+	
+	private ServletConfig servletConfig = null;
+	
+	private FilterConfig filterConfig = null;
 	
 	/**
 	 * Logger for this class
@@ -112,6 +119,20 @@ public class ControllerCore {
 	 */
 	public DbConnectionProvider getDbConnectionProvider() {
 		return dbConnectionProvider;
+	}
+	
+	/**
+	 * @param servletConfig the servletConfig to set
+	 */
+	public void setServletConfig(ServletConfig servletConfig) {
+		this.servletConfig = servletConfig;
+	}
+	
+	/**
+	 * @param filterConfig the filterConfig to set
+	 */
+	public void setFilterConfig(FilterConfig filterConfig) {
+		this.filterConfig = filterConfig;
 	}
 	
 	public Router createRouter(DbConnectionHolder conHolder) throws InstantiationException, IllegalAccessException,
@@ -245,9 +266,8 @@ public class ControllerCore {
 			((DatabaseCapable)action).setDatabase(conHolder.getConnection());
 		}
 
-		//TODO irgendwie mit FilterConfig lösen
-//		if (action instanceof Configurable)
-//			((Configurable)action).setContext(getServletConfig(), servletContext);
+		if (action instanceof Configurable)
+			((Configurable)action).setContext(servletConfig, filterConfig, servletContext);
 	}
 
 	private void doRedirect(HttpServletRequest request, HttpServletResponse response, String redirectDestination)
