@@ -53,6 +53,7 @@ public class ControllerFilter implements Filter {
 	public void init(FilterConfig filterConfig) throws ServletException {
 		try {
 			core = new ControllerCore(filterConfig.getServletContext());
+			core.setFilterConfig(filterConfig);
 		}
 		catch (Exception e) {
 			log.error("init() - Exception: "+e.getMessage(), e);
@@ -60,8 +61,9 @@ public class ControllerFilter implements Filter {
 		}
 	}
 	
-	protected void init(ServletContext servletContext, WeberknechtConf conf, DbConnectionProvider dbConnectionProvider) throws ClassNotFoundException {
+	protected void init(ServletContext servletContext, WeberknechtConf conf, DbConnectionProvider dbConnectionProvider, FilterConfig filterConfig) throws ClassNotFoundException {
 		core = new ControllerCore(servletContext, conf, dbConnectionProvider);
+		core.setFilterConfig(filterConfig);
 	}
 
 	/* (non-Javadoc)
